#
# OS Keystore
#
# Copyright (C) 2021-2024, HENSOLDT Cyber GmbH
# 
# SPDX-License-Identifier: GPL-2.0-or-later
#
# For commercial licensing, contact: info.cyber@hensoldt.net
#


cmake_minimum_required(VERSION 3.18)

add_subdirectory(os_keystore_common)
add_subdirectory(os_keystore_file)
add_subdirectory(os_keystore_ram_fv)
